# learnCmake

./: .clang-format  .gitignore  README.md
src/: Notice.md  cmake_info.md  git_use.md
src/advance_usage/: CMakeHelper.cmake
src/code_space/: CMakeLists.txt  usage.notice
src/code_space/cmake/: CMakeHelper.cmake  FindDependencies.cmake
src/code_space/data_structure/: CMakeLists.txt  milk_vector.hpp  milk_vector_test.cc
src/code_space/jot/: CMakeLists.txt  know_enum.hpp  know_enum_test.cc
src/zsh/: use.md
